# IM_GM

./: .gitignore  CMakeLists.txt  README.md
exp/: CMakeLists.txt
exp/include/: IA.h  OPIM_new.h  graphs.h  simulation.h
exp/include/newgreedy/: greedy.h  mrim.h
exp/src/: test.cpp  test_mrim.cpp
extern_libs/: how_to_run.txt
include/: Heap.h  aa.h  aa_rrpath.h  graphs.h  greedy.h  mrim.h  mrim_rrset.h  rm.h  rm_rrset.h
src/: test.cpp  test0.cpp  test2.cpp  test_aa.cpp  test_mrim.cpp  test_rm.cpp
